@@ -2189,3 +2189,10 @@ Tue Oct  9 22:19:02 BST 2007
 	nice graphic output of SSM results.
 hari jayaram <harijay@gmail.com>
 
+
+-----
+Thu Oct 11 23:20:47 BST 2007
+
+	convert axes.scm to axes.py for Paolo.
+
+
